[gd_scene load_steps=8 format=2]

[ext_resource path="res://TextureCut/Gate.png" type="Texture" id=1]
[ext_resource path="res://TextureCut/Door.png" type="Texture" id=2]
[ext_resource path="res://TextureCut/DoorOpen.png" type="Texture" id=3]
[ext_resource path="res://Scene/GateToDungeon.gd" type="Script" id=4]
[ext_resource path="res://UI/BlackBackground.jpg" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 5 )

[node name="GateToDungeon" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Gate" type="Sprite" parent="."]
position = Vector2( 1, -2 )
texture = ExtResource( 1 )

[node name="DoorOpen" type="Sprite" parent="Gate"]
visible = false
show_behind_parent = true
position = Vector2( 2, 34 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="DoorClose" type="Sprite" parent="Gate"]
show_behind_parent = true
position = Vector2( 2, 22 )
scale = Vector2( 0.93, 0.93 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -32 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 5 )
shape = SubResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 2, -28 )
scale = Vector2( 0.192187, 0.286458 )
z_index = -99
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 192 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
